overflow is hidden. platforms do not reach the top. fixed platforms spawning on each other

--- a/Entity.css
+++ b/Entity.css
@@ -1,10 +1,12 @@
 #container {
   margin: auto;
-  width: 60%;
-  height: 100vh;
+  width: 600px;
+  height: 950px;
   position: relative;
+  display: inline-block;
   background: url('assets/images/gameBackground.png') 0px 0px;
   background-repeat: no-repeat;
+  overflow: hidden;
 }
 
 #player {
